# nativestart

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: descriptor.rs  download_manager.rs  errors.rs  installation_manager.rs  java_launcher.rs  jvm_starter.rs  lib.rs  recompress.rs
src/ui/: mod.rs  splash.rs
src/validation/: checksum.rs  existence.rs  mod.rs  size.rs
