[package]
name = "nativestart"
version = "1.0.0"
authors = ["Jonas Bamberger <jonas.bamberger@gmail.com>", "Stefan Wismer <stefan@wismer.xyz>"]
edition = "2018"

[features]
#default = ["check-signature"]
check-signature = ["ring", "hex"]
checksum-blake3 = ["blake3"]

[dependencies]
log = { version = "0.4.14", features = ["max_level_debug", "release_max_level_info"] }
simplelog = "0.9.0"
error-chain = "0.12.4"


# downloading and file handling
attohttpc = "0.17.0"
progress-streams = "1.0.0"

serde = "1.0.123"
serde_json = "1.0.61"
serde_derive = "1.0.123"
ring = { version = "0.16.19", optional = true }
hex = { version = "0.4.2", optional = true }

dirs = "3.0"
walkdir = "2.3.1"
tar = "0.4"
xz2 = "0.1.6"
cluFlock = "1.2.5"
sha2 = "0.9.3"
blake3 = { version = "0.1.2", optional = true }


# UI
winit = "0.18.0"
msgbox = "0.6.0"
# window size fix based on minifb 0.19.3
minifb = { git = "https://github.com/swismer/rust_minifb.git", branch = "master" }
# use raqote 0.8.0 + first commit that updated to png 0.16 to reduce binary size
raqote = { git = "https://github.com/jrmuizel/raqote.git", rev = "8e770c3ce2b060884b42d57e1c35a19fd6db1bb6" }
font-kit = "0.7.1"
euclid = "0.20.14"
meval = "0.2.0"
send_wrapper = "0.5.0"

# JVM
dlopen="0.1.8"
jni-sys = "0.3.0"

[dependencies.image]
version = "0.23.0"
default-features = false
features = ["png"]

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.6.3"
cocoa = "0.18.5"
dispatch= { git = "https://github.com/jgh-/rust-dispatch", branch = "master" }

[target.'cfg(not(any(target_os = "windows", target_os = "macos", target_os = "ios")))'.dependencies]
openssl = {version = "0.10.45"}

[dev-dependencies]
tempfile = "3.2.0"

[target.'cfg(target_os = "macos")'.build-dependencies]
tempfile = "3.0.5"
fs_extra ="1.1.0"

[target.'cfg(target_os="windows")'.build-dependencies]
winres = "0.1.11"
winapi = { version = "0.3", features = [ "winnt" ] }

[profile.release]
opt-level = 'z'     # optimize for binary size
lto = true          # activate link time optimization to reduce binary size
codegen-units = 1   # disable parallel compiling to enable max optimizations
