[package]
name = "nativestart"
version = "1.0.0"
authors = ["Jonas Bamberger <jonas.bamberger@gmail.com>", "Stefan Wismer <stefan@wismer.xyz>"]
edition = "2021"

[features]
check-signature = ["dep:ring", "dep:hex"]
checksum-blake3 = ["dep:blake3"]

[dependencies]
log = { version = "0.4.17", features = ["max_level_debug", "release_max_level_info"] }
simplelog = { version = "0.12.1", default-features = false, features = ["local-offset"] }
error-chain = "0.12.4"


# downloading and file handling
attohttpc = "0.25.0"
progress-streams = "1.1.0"

serde = "1.0.160"
serde_json = "1.0.96"
serde_derive = "1.0.160"
ring = { version = "0.16.20", optional = true }
hex = { version = "0.4.3", optional = true }

dirs = "5.0.0"
walkdir = "2.3.3"
tar = "0.4"
xz2 = "0.1.7"
cluFlock = "1.2.7"
sha2 = "0.10.6"
blake3 = { version = "1.4.1", optional = true }


# UI
winit = "0.28.3"
msgbox = "0.7.0"
minifb = "0.24.0"
raqote = "0.8.2"
font-kit = "0.11.0"
euclid = "0.22.9"
meval = "0.2.0"
send_wrapper = "0.6.0"

# JVM
dlopen = "0.1.8"
jni-sys = "0.3.0"

[dependencies.image]
version = "0.24.6"
default-features = false
features = ["png"]

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.6.3"
cocoa = "0.18.5"
dispatch = { git = "https://github.com/jgh-/rust-dispatch", branch = "master" }

[target.'cfg(not(any(target_os = "windows", target_os = "macos", target_os = "ios")))'.dependencies]
openssl = { version = "0.10.45" }

[dev-dependencies]
tempfile = "3.2.0"

[target.'cfg(target_os = "macos")'.build-dependencies]
tempfile = "3.0.5"
fs_extra = "1.1.0"

[target.'cfg(target_os="windows")'.build-dependencies]
winres = "0.1.11"
winapi = { version = "0.3", features = ["winnt"] }

[profile.release]
opt-level = 'z'     # optimize for binary size
lto = true          # activate link time optimization to reduce binary size
codegen-units = 1   # disable parallel compiling to enable max optimizations
strip = true        # Automatically strip symbols from the binary
